confetti z-index and other bugs fixes, home page starter

--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -13,7 +13,7 @@ html {
 
 body {
     margin: 0px;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 // img{
